--- a/package.json
+++ b/package.json
@@ -1,12 +1,32 @@
 {
   "name": "ecommerce",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon -e js,ejs,html -w . -w public -w views -w routes -w models server.js",
+    "dev": "ts-node-dev --transpile-only --rs --ignore-watch node_modules --watch views server.ts"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/CaioDev1/ecommerce.git"
+  },
+  "bugs": {
+    "url": "https://github.com/CaioDev1/ecommerce/issues"
+  },
+  "homepage": "https://github.com/CaioDev1/ecommerce#readme",
+  "description": "",
+  "dependencies": {
+    "ejs": "^3.1.6",
+    "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "@types/ejs": "^3.0.5",
+    "@types/express": "^4.17.11",
+    "ts-node-dev": "^1.1.1",
+    "typescript": "^4.1.5"
+  }
 }
