--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon -e js,ejs,html -w . -w public -w views -w routes -w models server.js",
-    "start": "ts-node-dev --transpile-only --rs --ignore-watch node_modules --watch views server.ts"
+    "start": "node build/server.js",
+    "build": "tsc",
+    "postinstall": "npm run build",
+    "dev": "ts-node-dev --transpile-only --rs --ignore-watch node_modules --watch views server.ts"
   },
   "keywords": [],
   "author": "",
