--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node build/server.js",
+    "start": "node build/server.ts",
     "build": "tsc",
     "postinstall": "npm run build",
     "dev": "ts-node-dev --transpile-only --rs --ignore-watch node_modules --watch views server.ts"
