--- a/package.json
+++ b/package.json
@@ -2,12 +2,16 @@
   "name": "ecommerce",
   "version": "1.0.0",
   "main": "index.js",
+  "include" : [
+      "*.ts"
+  ],
+  "exclude" : [
+      "node_modules" 
+  ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node build/server.ts",
-    "build": "tsc",
-    "postinstall": "npm run build",
-    "dev": "ts-node-dev --transpile-only --rs --ignore-watch node_modules --watch views server.ts"
+    "dev": "ts-node-dev server.ts",
+    "start": "ts-node-dev --transpile-only --rs --ignore-watch node_modules --watch views server.ts"
   },
   "keywords": [],
   "author": "",
