--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "ecommerce",
   "version": "1.0.0",
   "main": "index.js",
-  "include" : [
-      "*.ts"
-  ],
-  "exclude" : [
-      "node_modules" 
-  ],
+  "compilerOptions": {
+    "include" : [
+        "*.ts"
+    ],
+    "exclude" : [
+        "node_modules" 
+    ]
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "ts-node-dev server.ts",
