--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "1.0.0",
   "main": "index.js",
   "compilerOptions": {
-    "include" : [
-        "*.ts"
+    "include": [
+      "*.ts"
     ],
-    "exclude" : [
-        "node_modules" 
+    "exclude": [
+      "node_modules"
     ]
   },
   "scripts": {
@@ -28,13 +28,11 @@
   "homepage": "https://github.com/CaioDev1/ecommerce#readme",
   "description": "",
   "dependencies": {
-    "ejs": "^3.1.6",
-    "express": "^4.17.1"
-  },
-  "devDependencies": {
-    "@types/ejs": "^3.0.5",
+    "@types/ejs": "^3.0.6",
     "@types/express": "^4.17.11",
+    "ejs": "^3.1.6",
+    "express": "^4.17.1",
     "ts-node-dev": "^1.1.6",
-    "typescript": "^4.1.5"
+    "typescript": "^4.2.2"
   }
 }
