--- a/package.json
+++ b/package.json
@@ -34,5 +34,8 @@
     "express": "^4.17.1",
     "ts-node-dev": "^1.1.6",
     "typescript": "^4.2.2"
+  },
+  "devDependencies": {
+    "@types/jquery": "^3.5.5"
   }
 }
