--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "ts-node-dev server.ts",
-    "start": "ts-node-dev --transpile-only --rs --ignore-watch node_modules --watch views server.ts"
+    "start": "node server.js",
+    "dev": "ts-node-dev --transpile-only --rs --ignore-watch node_modules --watch views server.ts"
   },
   "keywords": [],
   "author": "",
@@ -29,13 +29,13 @@
   "description": "",
   "dependencies": {
     "ejs": "^3.1.6",
-    "express": "^4.17.1",
-    "ts-node-dev": "^1.1.6",
-    "typescript": "^4.2.2"
+    "express": "^4.17.1"
   },
   "devDependencies": {
     "@types/ejs": "^3.0.6",
     "@types/express": "^4.17.11",
-    "@types/jquery": "^3.5.5"
+    "@types/jquery": "^3.5.5",
+    "ts-node-dev": "^1.1.8",
+    "typescript": "^4.7.4"
   }
 }
